kubernetes/ui/service.yaml
# Source: weatherapp-ui/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weatherapp-ui
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-name: "weatherapp-ui-lb"
    service.beta.kubernetes.io/do-loadbalancer-protocol: "http"
    service.beta.kubernetes.io/do-loadbalancer-healthcheck-path: "/health"
    service.beta.kubernetes.io/do-loadbalancer-healthcheck-protocol: "http"
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: weatherapp-ui
